# CompressFactory

./: CMakeLists.txt  Main.qml  README.md  main.cpp
qml/: Main.qml  SideTabBar.qml  Video.qml
qml/Component/: ArrowButton.qml  FileInput.qml  NavButton.qml  SideTabBar.qml
res/: resources.qrc
src/: main.cpp
